--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,26 +10,23 @@
     margin: 0 auto;
 }
 
-@import 'blocks/promo';
 @import 'blocks/header';
 @import 'blocks/buttons';
 @import 'blocks/advantages';
-@import 'blocks/title';
 @import 'blocks/consultation';
-@import 'blocks/forms';
 @import 'blocks/medical';
-@import 'blocks/catalog';
 @import 'blocks/reviews';
-@import 'blocks/product';
 @import 'blocks/footer';
 @import 'blocks/modal';
-@import 'blocks/pageup';
+@import 'blocks/product';
 @import 'blocks/description';
 @import 'blocks/media';
 @import 'blocks/counter';
 @import 'blocks/improvement';
 @import 'blocks/dialogue';
 @import 'blocks/review';
+@import 'blocks/feelings';
+@import 'blocks/title';
 
 
 
