--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -1,6 +1,6 @@
 .button-container {
     position: fixed;
-    bottom: 40px;
+    bottom: 50px;
     right: 50px;
     z-index: 1000;
 }
@@ -9,14 +9,14 @@
     width: 150px;
     height: 50px;
     border: none;
-    background-color: $main-color;
+    background-color: #ccc;;
     border-radius: 6px;
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 19px;
+    font-weight: 700;
+    font-size: 17px;
+    line-height: 28px;
     text-align: center;
     text-transform: uppercase;
-    color: #FFFFFF;
+    color: #010101;
     cursor: pointer;   
 }
 
