--- a/src/sass/blocks/_consultation.scss
+++ b/src/sass/blocks/_consultation.scss
@@ -1,4 +1,4 @@
-.advantages{
+.consultation{
     min-height: 680px;
     padding: 100px 0 108px 0;
     &__description{
@@ -6,6 +6,6 @@
         font-weight: 500;
         font-size: 20px;
         line-height: 30px;
-        color: #FFFFFF;
+        color: #000000;
     }
 }
