--- a/src/sass/blocks/_description.scss
+++ b/src/sass/blocks/_description.scss
@@ -2,6 +2,7 @@
     margin-top: 140px;
     .title{
         margin-bottom: 30px;
+        color:rgba(58, 209, 229, 1);
     }
     .label{
         margin: 30px 0;
@@ -33,7 +34,7 @@
                 top: 3px;
                 width: 21px;
                 height: 20px;
-                background: url('../logo/check_red.png') center center/cover no-repeat;
+                background: url('../logo/check_blue.png') center center/cover no-repeat;
             }
         }
     }
