--- a/src/sass/blocks/_product.scss
+++ b/src/sass/blocks/_product.scss
@@ -11,7 +11,7 @@
         display: flex;
         &-new{
             margin: 0 15px;
-            color: $second-color; 
+            color: red; 
         }
         &-old{
             text-decoration: line-through;
