--- a/src/sass/blocks/_reviews.scss
+++ b/src/sass/blocks/_reviews.scss
@@ -1,20 +1,36 @@
-.reviews{
+.reviews {
     margin-top: 40px;
-    &__descr{
-        padding: 30px;
-    }
-    &__item{
+    &__description{
         display: flex;
-        margin-top: 30px;
     }
-    &_autor{
+    
+    &__descr {
+        margin: 40px;
+    }
+    
+    &__items {
+        margin-top: 60px;
+    }
+    &__item {
+        margin-top: 20px;
+    }
+    &_autor {
         min-width: 100px;
         font-weight: 700;
         font-size: 18px;
         line-height: 18px;
         color: #0D0D0D;
     }
-    &__text{
+    
+    &__text {
         margin-left: 30px;
+    }
+    &__img{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+    img{
+        max-width: 200px;
     }
 }
