--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -19,6 +19,9 @@
         &__descr{
             margin-top: 30px;
         }
+        &__img{
+            width: 500px;
+        }
     }
     .title{
         display: flex;
@@ -74,6 +77,14 @@
 @media (max-width: 768px) {
     .container {
         max-width: 540px;
+    }
+    .label{
+        font-weight: 300;
+    }
+    .description{
+        &__list{
+            padding: 20px;
+        }
     }
     
 }
